<resources>
    <string name="app_name">格比飞勇</string>
    <string name="company_name" >格比飞勇工作室</string>

    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_logout">登出账号</string>
    <string name="default_description">努力，让生活更具色彩。</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>

    <string name="night_night">模式切换</string>
    <string name="activity_setting_title">设置</string>
    <string name="activity_change_channel_title">更改栏目</string>
    <string name="press_twice_to_exit">再按一次返回键退出</string>

    <string name="parse_exception_message">数据异常</string>
    <string name="network_exception_message">网络异常，请检查网络连接</string>
    <string name="api_request_error_msg">请求错误（%d）</string>
    <string name="fragment_weather_title">天气预报</string>
    <string name="fragment_joke_title">笑话全集</string>
    <string name="fragment_blog_title">技术博客</string>
    <string name="fragment_novel_title">小说全集</string>
    <string name="fragment_weekly_title">Android周报</string>
    <string name="fragment_information_title">日常资讯</string>
    <string name="more_information">更多资讯</string>

    <string name="activity_change_channel_show_channel">显示的栏目</string>
    <string name="activity_change_channel_other_channel">未显示的栏目</string>

    <string name="config_choose_language">简繁切换</string>
    <string name="config_clear_cache">清除缓存</string>
    <string name="config_navigation_drawer_wallpaper">侧栏壁纸</string>
    <string name="config_check_update">检查更新</string>
    <string name="config_about">关于</string>
    <string name="config_test">测试</string>
    <string name="na">N/A</string>
    <string name="nav_weather">温度 30C 阵雨</string>
    <string name="about_introduce">这是一个Android爱好者的App,有关心的天气预报，有闷骚的笑话，有大神的博客，我还喜欢小说。。。喜欢就干吧！本着免费开源的思想让各位哥们一起爽爽，本人也是菜鸟一个，拿来练手用，部分素材来源于网络，如有侵权请与我联系，我会在24小时内删除！嘿嘿 \n邮箱地址：azhansy@hotmail.com</string>

    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>

    <string name="permission_camera_message">在设置-应用-“LinkY”-权限中开启相机权限，以正常使用拍照等功能。</string>
    <string name="permission_phone_message">在设置-应用-“LinkY”-权限中开启电话权限，以正常使用LinkY功能。\nLinkY使用电话权限加密登录，以保证帐号登录和数据传输的安全性。</string>
    <string name="permission_sdcard_message">在设置-应用-“LinkY”-权限中开启存储空间权限，以正常使用LinkY功能。</string>
    <string name="permission_location_message">在设置-应用-“LinkY”-权限中开启位置信息权限，以正常使用发送位置、雷达等功能。</string>
    <string name="permission_contact_message">在设置-应用-“LinkY”-权限中开启通讯录权限，以正常使用邀请手机通讯录好友等功能。</string>
    <string name="permission_microphone_message">在设置-应用-“LinkY”-权限中开启麦克风权限，以正常使用语音功能。如果开启后仍无法使用，请重启手机。</string>
    <string name="permission_necessary_message">电话/存储空间关闭将无法使用LinkY</string>
    <!-- 6.0权限管理相关label -->
    <string name="tedpermission_setting">去设置</string>
    <string name="tedpermission_close">取消</string>
    <string name="tedpermission_confirm">确定</string>


</resources>
