<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackGround"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout" />
    <!-- User name and password -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:maxLength="30"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="8dp">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- Two card buttons -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="32dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/novel_item_white"
            app:cardElevation="2dp"
            app:cardMaxElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_menu_item_selected"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:singleLine="true"
                android:text="@string/login_login"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/novel_item_white"
            app:cardElevation="2dp"
            app:cardMaxElevation="2dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_menu_item"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:singleLine="true"
                android:text="@string/login_register"
                android:textColor="@color/login_btn_dark"
                android:textSize="16sp" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>