<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card-view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/myWindowBackground">

            <!-- Notice -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                tools:context="org.mewx.wenku8.fragment.ConfigFragment">

                <RelativeLayout
                    android:id="@+id/notice_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingTop="2dp"
                    android:visibility="gone">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        card-view:cardBackgroundColor="@color/novel_item_white"
                        card-view:cardElevation="2dp"
                        card-view:cardMaxElevation="2dp"
                        card-view:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/notice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/menu_transparent"
                            android:paddingBottom="8dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/na"
                            android:textColor="@color/menu_text_color"
                            android:textSize="12sp" />
                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_choose_language"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:visibility="gone"
                    android:background="@drawable/btn_menu_item"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/image_chooselanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:src="@mipmap/ic_config" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@id/image_chooselanguage"
                        android:text="@string/config_choose_language"
                        android:textColor="@color/dlgTitleColor"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:visibility="gone"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_divide_line_color" />
                <!-- Layout ClearCache -->
                <RelativeLayout
                    android:id="@+id/btn_clear_cache"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_menu_item"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/image_clearcache"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:src="@mipmap/ic_clearcache" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@id/image_clearcache"
                        android:text="@string/config_clear_cache"
                        android:textColor="@color/dlgTitleColor"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        tools:text="2.0M"
                        android:id="@+id/tv_cache_size"
                        android:layout_marginRight="20dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_divide_line_color" />
                <!-- Layout NavigationDrawerWallpaper -->
                <RelativeLayout
                    android:id="@+id/btn_navigation_drawer_wallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:visibility="gone"
                    android:background="@drawable/btn_menu_item"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/image_wallpaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:src="@mipmap/ic_wallpaper" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@id/image_wallpaper"
                        android:text="@string/config_navigation_drawer_wallpaper"
                        android:textColor="@color/dlgTitleColor"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="16dp"
                        android:src="@mipmap/ic_rightarrow" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:visibility="gone"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_divide_line_color" />
                <!-- Layout CheckUpdate -->
                <RelativeLayout
                    android:id="@+id/btn_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_menu_item"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/image_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:src="@mipmap/ic_update" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@id/image_update"
                        android:text="@string/config_check_update"
                        android:textColor="@color/dlgTitleColor"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="16dp"
                        android:src="@mipmap/ic_rightarrow" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_divide_line_color" />
                <!-- Layout About -->
                <RelativeLayout
                    android:id="@+id/btn_about"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/btn_menu_item"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/image_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:src="@mipmap/ic_about" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_toRightOf="@id/image_about"
                        android:text="@string/config_about"
                        android:textColor="@color/dlgTitleColor"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="16dp"
                        android:src="@mipmap/ic_rightarrow" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_exit"
            style="@style/ButtonStyle"
            android:text="退出" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>